--- a/MercadOn/MercadOn/Views/Shared/_LayoutMercado.cshtml
+++ b/MercadOn/MercadOn/Views/Shared/_LayoutMercado.cshtml
@@ -16,7 +16,8 @@
 
     <!-- Custom styles for this template -->
     <link href="~/Content/StylePaginaProdutos/css/shop-homepage.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="~/Content/alertify/css/alertify.css">
+    <link rel="stylesheet" href="~/Content/alertify/css/themes/default.css">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Produtos</a>
+                        <a class="nav-link" href="Mercado/ProdutoPreco?idMercado=@Session["mercadoid"]">Produtos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Meu Cadastro</a>
@@ -73,7 +74,9 @@
     <!-- Bootstrap core JavaScript -->
     <script src="~/Content/StylePaginaProdutos/vendor/jquery/jquery.min.js"></script>
     <script src="~/Content/StylePaginaProdutos/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <script src="~/Content/alertify/alertify.js"></script>
+    <script src="~/Content/alertify/alertify.min.js"></script>
 </body>
 
 </html>
+@RenderSection("scripts", required: false)
