entrega final da sub, entrega ok 6 bola

--- a/MercadOn/MercadOn/Views/Mercado/Index.cshtml
+++ b/MercadOn/MercadOn/Views/Mercado/Index.cshtml
@@ -4,5 +4,5 @@
     Layout = "~/Views/Shared/_LayoutMercado.cshtml";
 }
 
-<h3>Olá @Html.TextBoxFor(x => x.NomeMercado)</h3>
+<h3>Olá @Html.DisplayFor(x => x.NomeMercado)</h3>
 
