--- a/MercadOn/MercadOn/Views/Mercado/Mercados.cshtml
+++ b/MercadOn/MercadOn/Views/Mercado/Mercados.cshtml
@@ -15,7 +15,7 @@
                                     <a href="/MercadoProduto/MercadoProduto?idMercado=@mercado.mercadoid"><img class="card-img-top" src="@mercado.Url" alt=""></a>
                                     <div class="card-body">
                                         <h4 class="card-title">
-                                            <a href="/MercadoProduto/MercadoProduto">@mercado.NomeMercado</a>
+                                            <a href="/MercadoProduto/MercadoProduto?idMercado=@mercado.mercadoid">@mercado.NomeMercado</a>
                                         </h4>
 
                                         <p class="card-text">@mercado.Endereco</p>
