--- a/MercadOn/MercadOn/Views/Mercado/Produto.cshtml
+++ b/MercadOn/MercadOn/Views/Mercado/Produto.cshtml
@@ -4,6 +4,8 @@
     Layout = "~/Views/Shared/_LayoutMercado.cshtml";
 }
 
+
+
 <h2>Produto</h2>
 
 <div class="limiter">
@@ -17,19 +19,19 @@
             <span class="label-input100">Nome Produto</span>
         </div>
 
-
+        <br />
         <div class="wrap-input100 validate-input" data-validate="Uma senha é necessária">
             @Html.TextBoxFor(x => x.descricao, new { @class = "input100" })
             <span class="focus-input100"></span>
             <span class="label-input100">Descrição</span>
         </div>
-
+        <br />
         <div class="wrap-input100 validate-input" data-validate="Uma senha é necessária">
             @Html.TextBoxFor(x => x.marca, new { @class = "input100" })
             <span class="focus-input100"></span>
             <span class="label-input100">Marca</span>
         </div>
-
+        <br />
         <div class="flex-sb-m w-full p-t-3 p-b-32">
 
         </div>
@@ -37,10 +39,10 @@
 
         <div class="container-login100-form-btn">
             <button class="login100-form-btn">
-                Editar
+                Salvar
             </button>
         </div>
-
+        <br />
     }
 
     <div class="row">
@@ -70,3 +72,31 @@
     </div>
 
 </div>
+@section scripts{
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $(function () {
+                configureModal();
+
+                var status = "@TempData["Status"]";
+
+                if (status != "") {
+                    if (status != "False") {
+                        alertify.success("@TempData["Msg"]");
+                    } else {
+                        alertify.error("@TempData["Msg"]");
+                    }
+                }
+
+            });
+
+
+        });
+
+        function configureModal() {
+            alertify.confirm().setHeader("Atenção");
+            alertify.alert().setHeader("Atenção");;
+        }
+    </script>
+}
