--- a/MercadOn/MercadOn/Views/Shared/_LayoutMercado.cshtml
+++ b/MercadOn/MercadOn/Views/Shared/_LayoutMercado.cshtml
@@ -34,13 +34,16 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/Mercado/Categoria">
                             Categorias
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Mercado/ProdutoPreco?idMercado=@Session["mercadoid"]">Produtos</a>
+                        <a class="nav-link" href="/Mercado/Produto">Produto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Mercado/ProdutoPreco?idMercado=@Session["mercadoid"]">Produto Preço</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Meu Cadastro</a>
